# easy-inventory

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose-deploy.yml  docker-compose.yml  pyproject.toml  test.py
app/app/: settings.py  urls.py
app/inventory/: admin.py  models.py  views.py
app/inventory/migrations/: 0001_initial.py  0002_auto_20201205_1944.py  0003_auto_20201208_0717.py
app/inventory/templates/inventory/: product_list.html
scripts/: entrypoint.sh
