[tool.poetry]
name = "easy-inventory"
version = "0.1.0"
description = ""
authors = ["borismnq <borismnq@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.4"
djangorestframework = "^3.12.2"
black = "^20.8b1"
pre-commit = "^2.9.2"
pylint = "^2.6.0"
isort = "^5.6.4"
seed-isort-config = "^2.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
