[tool.poetry]
name = "easy-inventory"
version = "0.1.0"
description = ""
authors = ["borismnq <borismnq@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.4"
djangorestframework = "^3.12.2"
python-dotenv = "^0.15.0"
uWSGI = "^2.0.19"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]
pre-commit = "^2.9.2"
isort = "^5.6.4"
pylint = "^2.6.0"
seed-isort-config = "^2.2.0"
black = "^20.8b1"
ipdb = "^0.13.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
